# CitiesAI

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
citiesai/: __init__.py  advice_output.py  agent_tools.py  app.py  ask_core.py  briefing.py  cache.py  city_issues.py  city_name.py  cli.py  config.py  constants.py  conversation.py  dashboard.py  diff.py  discovery.py  doctor.py  env_store.py  feedback.py  fix_first.py  forecasts.py  historian.py  issue_advisor.py  issues.py  keywords.py  knowledge.py  llm.py  mcp_server.py  mod_install.py  official_fallbacks.py  rates.py  report_html.py  report_ops.py  setup_wizard.py  single_instance.py  snapshot.py  snapshot_history.py  social_stats.py  status.py  suggestions.py  (+5 more)
citiesai/analyzers/: __init__.py  access_gaps.py  budget.py  demand_factors.py  housing.py  report_card.py  transit.py  utilities_services.py
citiesai/bundled/: __init__.py
citiesai/gui/: __init__.py  api.py  auth.py  hud_app.py  hud_client.py  hud_process.py  hud_window.py  overlay.py  server.py  tray.py
citiesai/gui/static/: app.css  app.js  hud.html  index.html
docs/: ADVICE-COMPANION.md  AGENTS-AND-MCP.md  BETA.md  CITIESAI-MCP.md  DISCORD-CHANNEL-SETUP.md  FEEDBACK-DISCORD.md  INSTALL-MOD.md  REAL-LIFE-TEST.md  SCHEMA-2.11-PROPOSAL.md  TROUBLESHOOTING.md  beta-post.md
packaging/: CitiesAI.iss  citiesai.spec  secrets.local.env.example
packaging/assets/: README.md
packaging/bundled/: README.md
scripts/: advisor.ps1  build-mod-release.ps1  build-release.ps1  bump-version.ps1  check-toolchain.ps1  comayor-screenshot-qa.py  game-paths.ps1  generate-brand-assets.py  install-data-export.ps1  install-unity-for-cs2.ps1  publish-data-export.ps1  verify-export.ps1
skills/cities2-advisor/: SKILL.md
tests/: conftest.py  test_access_gaps.py  test_advisor.py  test_boundaries_091.py  test_briefing.py  test_capabilities.py  test_city_issues.py  test_city_name.py  test_config_preferences.py  test_demand_factors.py  test_discovery.py  test_fix_first.py  test_gui.py  test_housing_labor.py  test_hud.py  test_issue_advisor.py  test_issues.py  test_knowledge_cache.py  test_llm.py  test_llm_api_key.py  test_official_fallbacks.py  test_rates.py  test_report_html.py  test_social_stats.py  test_transit_groups.py  test_updater.py  test_utilities_services.py
